# gpal

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.claude/skills/update-models/: SKILL.md
.claude/skills/update-models/references/: model-update-checklist.md
contrib/: animation-v0.4.1.py
src/gpal/: __init__.py  index.py  server.py
tests/: list_available_models.py  test_agentic.py  test_config.py  test_consult.py  test_index.py  test_server.py  test_tools.py
